[package]
name = "apyee"
version = "0.4.0"
edition = "2021"
repository = "https://github.com/mztikk/apyee"
authors = ["Nils Feierabend <mztikk@outlook.de>"]
license = "MIT"
description = "yeelight api"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
get_params_derive = { version = "0.5.0"}
quote = "1.0.18"
rand = "0.8.5"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
serde_variant = "0.1.1"
syn = "1.0.96"
thiserror = "1.0.31"
tokio = { version = "1.19.2", features = ["full"] }
