[package]
name = "apyee-macros"
description = "derive macro for get_params as JsValue"

repository.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
convert_case = "0.6.0"
proc-macro2 = "1.0.68"
quote = "1.0.33"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
syn = { version = "2.0.38", features = ["full"] }
thiserror = "1.0.49"
