[package]
name = "apyee"
description = "yeelight api"

repository.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apyee-macros = { path = "../apyee-macros", version = "~0.6.0"}
quote = "1.0.33"
rand = "0.8.5"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
serde_variant = "0.1.2"
thiserror = "1.0.49"
tokio = { version = "1.32.0", features = ["full"] }
